[gd_scene load_steps=12 format=3 uid="uid://m1t1bmal866w"]

[ext_resource type="Script" path="res://seleção_de_fases.gd" id="1_cm873"]
[ext_resource type="Texture2D" uid="uid://bi2vtdbt7pin1" path="res://assets/icons_ui/predio.png" id="1_t8ha1"]
[ext_resource type="Texture2D" uid="uid://d1ef8fs40vp7d" path="res://assets/icons_ui/botoes(normais)/fase1.png" id="2_f2tap"]
[ext_resource type="Texture2D" uid="uid://lrp7aga5lpmj" path="res://assets/icons_ui/botoes(clicados)/fase1.png" id="3_dyml7"]
[ext_resource type="Texture2D" uid="uid://3wnmbx740jnt" path="res://assets/icons_ui/botoes(normais)/fase2.png" id="4_dksi0"]
[ext_resource type="Texture2D" uid="uid://y3ys28imbt5n" path="res://assets/icons_ui/botoes(clicados)/fase2.png" id="5_4kdkr"]
[ext_resource type="Texture2D" uid="uid://dsoeo2vc7w1gr" path="res://assets/icons_ui/botoes(normais)/fase3.png" id="6_1t7lq"]
[ext_resource type="Texture2D" uid="uid://dk6tcfj84bye7" path="res://assets/icons_ui/botoes(clicados)/fase3.png" id="7_jfkel"]
[ext_resource type="Texture2D" uid="uid://c0b4mralanwvo" path="res://assets/icons_ui/botoes(normais)/fase4.png" id="8_p5gox"]
[ext_resource type="Texture2D" uid="uid://clscdcf0eb24e" path="res://assets/icons_ui/botoes(clicados)/fase4.png" id="9_mw631"]
[ext_resource type="Texture2D" uid="uid://y85mpxdddpr" path="res://assets/icons_ui/casinha.png" id="10_7edxh"]

[node name="seleçãoDeFases" type="Node2D"]
script = ExtResource("1_cm873")

[node name="Predio" type="Sprite2D" parent="."]
scale = Vector2(6, 6)
texture = ExtResource("1_t8ha1")
offset = Vector2(125, 56)
metadata/_edit_lock_ = true

[node name="fase1" type="TextureButton" parent="."]
offset_top = 384.0
offset_right = 384.0
offset_bottom = 480.0
texture_normal = ExtResource("2_f2tap")
texture_pressed = ExtResource("3_dyml7")
texture_hover = ExtResource("3_dyml7")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="fase2" type="TextureButton" parent="."]
offset_top = 288.0
offset_right = 384.0
offset_bottom = 384.0
texture_normal = ExtResource("4_dksi0")
texture_pressed = ExtResource("5_4kdkr")
texture_hover = ExtResource("5_4kdkr")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="fase3" type="TextureButton" parent="."]
offset_top = 192.0
offset_right = 384.0
offset_bottom = 288.0
texture_normal = ExtResource("6_1t7lq")
texture_pressed = ExtResource("7_jfkel")
texture_hover = ExtResource("7_jfkel")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="fase4" type="TextureButton" parent="."]
offset_top = 96.0
offset_right = 384.0
offset_bottom = 192.0
texture_normal = ExtResource("8_p5gox")
texture_pressed = ExtResource("9_mw631")
texture_hover = ExtResource("9_mw631")
stretch_mode = 0
metadata/_edit_lock_ = true

[node name="casinha" type="Button" parent="."]
offset_left = 5.0
offset_top = 12.0
offset_right = 74.0
offset_bottom = 76.0
icon = ExtResource("10_7edxh")
icon_alignment = 1
expand_icon = true
metadata/_edit_lock_ = true

[connection signal="pressed" from="fase1" to="." method="_on_fase_1_pressed"]
[connection signal="pressed" from="fase2" to="." method="_on_fase_2_pressed"]
[connection signal="pressed" from="fase3" to="." method="_on_fase_3_pressed"]
[connection signal="pressed" from="fase4" to="." method="_on_fase_4_pressed"]
[connection signal="pressed" from="casinha" to="." method="_on_casinha_pressed"]
